CTF Terminal Update